@@ -1,3 +1,7 @@
+2000-08-12  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>
+
+	* cli_parse.pl, cli2html.pl, cli2man.pl: Created these programs.
+
 2000-08-01  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>
 
 	* main.cc (show_option): Fixed several width glitches.
